@@ -1011,7 +1011,9 @@ typedef void (*RUBY_DATA_FUNC)(void*);
 # endif
 #endif
 VALUE rb_data_object_alloc(VALUE,void*,RUBY_DATA_FUNC,RUBY_DATA_FUNC);
+VALUE rb_data_object_zalloc(VALUE,size_t,RUBY_DATA_FUNC,RUBY_DATA_FUNC);
 VALUE rb_data_typed_object_alloc(VALUE klass, void *datap, const rb_data_type_t *);
+VALUE rb_data_typed_object_zalloc(VALUE klass, size_t size, const rb_data_type_t *type);
 int rb_typeddata_inherited_p(const rb_data_type_t *child, const rb_data_type_t *parent);
 int rb_typeddata_is_kind_of(VALUE, const rb_data_type_t *);
 void *rb_check_typeddata(VALUE, const rb_data_type_t *);
@@ -1030,16 +1032,14 @@ void *rb_check_typeddata(VALUE, const rb_data_type_t *);
     rb_data_object_alloc((klass),(sval),(RUBY_DATA_FUNC)(mark),(RUBY_DATA_FUNC)(free))
 
 #define Data_Make_Struct(klass,type,mark,free,sval) (\
-    (sval) = ZALLOC(type),\
-    Data_Wrap_Struct((klass),(mark),(free),(sval))\
+    rb_data_struct_make((klass),(RUBY_DATA_FUNC)(mark),(RUBY_DATA_FUNC)(free),(void **)&(sval),sizeof(type)) \
 )
 
 #define TypedData_Wrap_Struct(klass,data_type,sval)\
   rb_data_typed_object_alloc((klass),(sval),(data_type))
 
 #define TypedData_Make_Struct(klass, type, data_type, sval) (\
-    (sval) = ZALLOC(type),\
-    TypedData_Wrap_Struct((klass),(data_type),(sval))\
+    rb_data_typed_struct_make((klass),(data_type),(void **)&(sval),sizeof(type)) \
 )
 
 #define Data_Get_Struct(obj,type,sval) \
@@ -1202,12 +1202,31 @@ rb_data_object_get_warning(VALUE obj)
     return rb_data_object_get(obj);
 }
 
+static inline VALUE
+rb_data_struct_make(VALUE klass, RUBY_DATA_FUNC mark_func, RUBY_DATA_FUNC free_func, void **datap, size_t size)
+{
+    VALUE obj = rb_data_object_zalloc(klass, size, mark_func, free_func);
+    *datap = DATA_PTR(obj);
+    return obj;
+}
+
+static inline VALUE
+rb_data_typed_struct_make(VALUE klass, const rb_data_type_t *type, void **datap, size_t size)
+{
+    VALUE obj = rb_data_typed_object_zalloc(klass, size, type);
+    *datap = DATA_PTR(obj);
+    return obj;
+}
+
 #define rb_data_object_alloc_0 rb_data_object_alloc
 #define rb_data_object_alloc_1 rb_data_object_alloc_warning
 #define rb_data_object_alloc  RUBY_MACRO_SELECT(rb_data_object_alloc_, RUBY_UNTYPED_DATA_WARNING)
 #define rb_data_object_get_0 rb_data_object_get
 #define rb_data_object_get_1 rb_data_object_get_warning
 #define rb_data_object_get  RUBY_MACRO_SELECT(rb_data_object_get_, RUBY_UNTYPED_DATA_WARNING)
+#define rb_data_struct_make_0 rb_data_struct_make
+#define rb_data_struct_make_1 rb_data_struct_make_warning
+#define rb_data_struct_make   RUBY_MACRO_SELECT(rb_data_struct_make_, RUBY_UNTYPED_DATA_WARNING)
 
 #if USE_RGENGC
 #define OBJ_PROMOTED_RAW(x)         ((RBASIC(x)->flags & (FL_PROMOTED0|FL_PROMOTED1)) == (FL_PROMOTED0|FL_PROMOTED1))
